# xtab

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
src/: main.rs
tests/: test_cli.rs
