[package]
name = "xtab"
version = "0.1.0"
edition = "2021"
authors = ["Caleb Grant <grantcaleb22@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to create cross tabulations from csv files."
readme = "README.md"
homepage = "https://github.com/geocoug/xtab"
repository = "https://github.com/geocoug/xtab"
keywords = ["cli", "crosstab", "xtab", "csv"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
clap_mangen = "0.2.20"
polars = "0.38.2"
csv = "1.3.0"
